; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/arm64/extr_gicv3_its.c_cmd_format_pid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/arm64/extr_gicv3_its.c_cmd_format_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.its_cmd = type { i32* }

@CMD_PID_MASK = common dso_local global i32 0, align 4
@CMD_PID_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.its_cmd*, i64)* @cmd_format_pid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmd_format_pid(%struct.its_cmd* %0, i64 %1) #0 {
  %3 = alloca %struct.its_cmd*, align 8
  %4 = alloca i64, align 8
  store %struct.its_cmd* %0, %struct.its_cmd** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32, i32* @CMD_PID_MASK, align 4
  %6 = xor i32 %5, -1
  %7 = call i32 @htole64(i32 %6)
  %8 = load %struct.its_cmd*, %struct.its_cmd** %3, align 8
  %9 = getelementptr inbounds %struct.its_cmd, %struct.its_cmd* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 1
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, %7
  store i32 %13, i32* %11, align 4
  %14 = load i64, i64* %4, align 8
  %15 = trunc i64 %14 to i32
  %16 = load i32, i32* @CMD_PID_SHIFT, align 4
  %17 = shl i32 %15, %16
  %18 = call i32 @htole64(i32 %17)
  %19 = load %struct.its_cmd*, %struct.its_cmd** %3, align 8
  %20 = getelementptr inbounds %struct.its_cmd, %struct.its_cmd* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %23, %18
  store i32 %24, i32* %22, align 4
  ret void
}

declare dso_local i32 @htole64(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
